Changes that improve compatibility w/ the Sixth Edition (V6) UNIX
Thompson shell are marked w/ a `C:' in the details below.

-------------------------------------------------------------------------------
[osh-current] (development):
	* Work In Progress ( see http://v6shell.org/src/current/ )

Makefile.config:
	* Added comment to celebrate 12 years of osh via osh-current.

osh.c:
	* Enable `.' and `source' special built-in command execution
	  to succeed when the user invokes the shell as `osh -c string'.
	  EG:

		% osh -c '. file [arg1 ...]' [arg1 ...]

	  or:

		% osh -c 'source file [arg1 ...]' [arg1 ...]

	  .

-------------------------------------------------------------------------------
[osh-20131109] (latest):
osh.1:
	* Changed `LICENSE' to LICENSE to match the other manual pages.

examples/FILEPREP:
	* Changed `sigign' invocation to `trap'.

examples/dot.oshrc:
	* Added two useful pwd-related aliases: `ocpwd' and `opwd'

	* Added a `now' and a `sysinfo' alias.

-------------------------------------------------------------------------------
[osh-20130331]:
*sh.[ch]:
	* Removed the deprecated $n and $s parameters.
	  Now, the user can `set' and `unset' n and s as shell variables.
	  The following command line is a simple way to replace
	  all instances of $n w/ $# and $s w/ $? in file:

		% <file(rm -f file;sed 's/$n/$#/g;s/$s/$?/g'>file)

	  .

osh:
	* Added code to print diagnostics w/ line numbers when possible.
	  When reporting error(s), if a diagnostic is to be printed, the
	  shell gets the line number of the file where the error happened,
	  adjusts the diagnostic (adding the name of the file and the line
	  number if the standard input from which the shell reads and
	  interprets commands lines is seekable), and prints it.  EG:

		% echo R* ; osh R* ; head -1 R*
		README
		osh: README: 1: syntax error
		Welcome to Osh (V6Shell) - osh-20130331 !

	  .

	* Renamed the `sigign' special built-in command to `trap'