@@ -270,6 +270,6 @@ The original license follows:
 .\"	@(#)strtol.3	8.1 (Berkeley) 6/4/93
 ===
 
-Jeffrey Allen Neitzel						2014/01/01
+Jeffrey Allen Neitzel						2014/04/09
 
 @(#)$Id$
