@@ -22,5 +22,5 @@
 #	osh-YYYYMMDD           == official release
 #	osh-YYYYMMDD-p[1-9]    == patched  release
 #
-OSH_DATE=	April 8, 2014
+OSH_DATE=	April 9, 2014
 OSH_VERSION=	osh-current
