@@ -57,6 +57,6 @@ you to contact me via email.  Thanks & Enjoy!
 
 Jeffrey Allen Neitzel
 <jan (at) v6shell (dot) org>
-http://v6shell.org/						2014/04/02
+http://v6shell.org/						2014/04/09
 
 @(#)$Id$
